--- a/index.html
+++ b/index.html
@@ -153,6 +153,23 @@
             </div>
             <div class="col-12 col-sm-4 py-2">
                 <div class="card">
+                    <div class="image-top" style="background-image: url(assets/img/pastas.jpg)"></div>
+                    <div class="card-body">
+                        <h5 class="card-title fw-bold">Pastas italianas</h5>
+                        <p class="card-text">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            Deserunt a culpa doloremque voluptatem dicta nam. Maxime ipsum,
+                            consequatur quos error fuga excepturi quo. Laudantium optio
+                            pariatur laboriosam modi, ea molestias?
+                        </p>
+                        <button type="button" class="btn btn-outline-info">
+                            Ver más
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-sm-4 py-2">
+                <div class="card">
                     <div class="image-top" style="background-image: url(assets/img/card-3.jpg)"></div>
                     <div class="card-body">
                         <h5 class="card-title fw-bold">Salmones de Alaska</h5>
