--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">Contacto</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Nuestros Clientes</a>
+                    </li>
 
                 </ul>
 
